fixed z-index on home page profile pic

--- a/about1.css
+++ b/about1.css
@@ -158,7 +158,7 @@ li:hover {
 
 img {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   width: 100%;
   border-radius: 4%;
   box-shadow: 0 0 48px 12px black;
